--- a/xCAT/etc/rsyslog.d/xcat-cluster.conf
+++ b/xCAT/etc/rsyslog.d/xcat-cluster.conf
@@ -1,2 +1,2 @@
 $template xCATTraditionalFormat0,"%timegenerated% %HOSTNAME% %syslogtag% %msg:::drop-last-lf%\n"
-:syslogtag, isequal, "xcat" /var/log/xcat/cluster.log;xCATTraditionalFormat0
+:programname, isequal, "xcat" /var/log/xcat/cluster.log;xCATTraditionalFormat0
