--- a/xCAT/etc/rsyslog.d/xcat-compute.conf
+++ b/xCAT/etc/rsyslog.d/xcat-compute.conf
@@ -1,2 +1,2 @@
 $template xCATTraditionalFormat9,"%timegenerated% %HOSTNAME% %syslogtag% %msg:::drop-last-lf%\n"
-:hostname, [!]isequal, $myhostname /var/log/xcat/computes.log;xCATTraditionalFormat9
+:fromhost-ip, !isequal, "127.0.0.1" /var/log/xcat/computes.log;xCATTraditionalFormat9
