Move genesis files from xCAT-genesis-builder to xCAT-genesis-scripts

--- a/xCAT-genesis-builder/rsyslog.conf
+++ b/xCAT-genesis-builder/rsyslog.conf
@@ -1,4 +1,1 @@
-$ModLoad imuxsock
-$ModLoad immark
-$MarkMessagePeriod 1200
-*.* /var/log/xcat.genesis
+# Contents of this file will be overwritten by xCAT-genesis-scripts/etc/rsyslog.conf file from xcat-core
