Log tftp logs to /var/log/messages

--- a/xCAT/etc/rsyslog.d/xcat-debug.conf
+++ b/xCAT/etc/rsyslog.d/xcat-debug.conf
@@ -1,2 +1,3 @@
 # By default, dhcpd use the ``daemon'' facility. Thus dhcp logs will go here.
-daemon.debug			/var/log/messages
+# ftp.* is for tftp log.
+daemon.debug;ftp.*		/var/log/messages
