add cases' variables

--- a/xCAT-test/autotest/linux.conf.template
+++ b/xCAT-test/autotest/linux.conf.template
@@ -88,8 +88,26 @@ DOCKERHOSIP=10.4.27.10
 DOCKERMNXCAT=xcatmn
 MYNET0VALUE=10.0.0.0/8
 DOCKERCN=host05c08
-DOCKERHOST=c910f04x27v09
 #docker host setup end
+#For installnics start
+INSTALLNICIP=10.2.2.27
+#End
+#For image define start
+STATELITE=rhels7.2-ppc64-statelite-compute
+STATELESS=rhels7.2-ppc64-netboot-compute
+#End
+#For switch case start
+range=10.4-5.24-25.1
+#End
+#For ntp case start
+extntpserversip=10.2.1.12
+DATE=2016
+#End
+#For bmc test case start
+bmcrange=10.4.30.254
+bmcusername=USERID
+bmcpasswd=PASSW0RD
+#End
 [Custom]
 
 #commands run before test
