support buildkit for centos mn

--- a/xCAT-buildkit/share/xcat/kits/kit_template/buildkit.conf
+++ b/xCAT-buildkit/share/xcat/kits/kit_template/buildkit.conf
@@ -107,7 +107,7 @@ kitrepo:
   osmajorversion=<<<INSERT_osmajorversion_HERE>>>
   osminorversion=<<<INSERT_osminorversion_HERE>>>
   osarch=<<<INSERT_osarch_HERE>>>
-  # compat_osbasenames=
+  # compat_osbasenames=<<<INSERT_compatible_HERE_>>>
 #
 # kitcomponent: This stanza defines one Kit Component.
 #               There can be zero or more kitcomponent stanzas.
