--- a/xCAT-test/autotest/linux.conf.template
+++ b/xCAT-test/autotest/linux.conf.template
@@ -72,6 +72,8 @@ UBUNTU_MIGRATION1_CORE=https://xcat.org/files/xcat/xcat-core/2.10.x_Ubuntu/xcat-
 UBUNTU_MIGRATION2_CORE=https://xcat.org/files/xcat/xcat-core/2.11.x_Ubuntu/xcat-core/xcat-core-2.11.1-ubuntu.tar.bz2
 UBUNTU_MIGRATION1_DEP=https://xcat.org/files/xcat/xcat-dep/2.x_Ubuntu/xcat-dep-ubuntu-20151012.tar.bz
 UBUNTU_MIGRATION2_DEP=https://xcat.org/files/xcat/xcat-dep/2.x_Ubuntu/xcat-dep-ubuntu-2.11.1.tar.bz2
+UBUNTU_MIGRATION1_VERSION=2.10
+UBUNTU_MIGRATION2_VERSION=2.11.1
 MIGRATION1_CORE=http://xcat.org/files/xcat/xcat-core/2.10.x_Linux/xcat-core/xcat-core-2.10.tar.bz2
 MIGRATION2_CORE=http://xcat.org/files/xcat/xcat-core/2.11.x_Linux/xcat-core/xcat-core-2.11.1-linux.tar.bz2
 MIGRATION1_DEP=http://xcat.org/files/xcat/xcat-dep/2.x_Linux/xcat-dep-2.10.tar.bz2
