--- a/xCAT-probe/debian/control
+++ b/xCAT-probe/debian/control
@@ -7,5 +7,6 @@ Standards-Version: 3.7.2
 
 Package: xcat-probe
 Architecture: all
-Depends: wget, dnsutils, tftp-hpa, ${perl:Depends}
+Depends: ${perl:Depends}
+Recommends: wget, dnsutils, tftp-hpa
 Description: Provides a toolkit to help probe all the possible issues in xCAT 
