--- a/xCAT-UI/debian/control
+++ b/xCAT-UI/debian/control
@@ -2,11 +2,12 @@ Source: xcat-ui
 Section: admin
 Priority: extra
 Maintainer: xCAT <xcat-user@lists.sourceforge.net>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
+Build-Depends: debhelper (>= 9)
+Standards-Version: 3.9.4
 
 Package: xcat-ui
 Architecture: all
-Depends: ${perl:Depends}, python (>= 2.3), apache2, libapache2-mod-php5
-Description: Provides a browser-based interface for xCAT (extreme Cluster Administration Tool).
- Provides a browser-based interface for xCAT (extreme Cluster Administration Tool).
+Depends: ${perl:Depends}, python (>= 2.3), apache2, libapache2-mod-php
+Description: Provides a browser-based interface for xCAT
+ Provides a browser-based interface for xCAT (extreme Cluster Administration
+ Tool).
