--- a/xCAT-vlan/debian/control
+++ b/xCAT-vlan/debian/control
@@ -2,12 +2,11 @@ Source: xcat-vlan
 Section: admin
 Priority: extra
 Maintainer: root <root@unknown>
-Build-Depends: debhelper (>= 8.0.0)
-Standards-Version: 3.9.2
-#Vcs-Git: git://git.debian.org/collab-maint/xcat-vlan.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/xcat-vlan.git;a=summary
+Build-Depends: debhelper (>= 9)
+Standards-Version: 3.9.4
+Homepage: https://xcat.org/
 
 Package: xcat-vlan
 Architecture: all
-Depends: xcat-client
+Depends: xcat-client (>= 2.13-snap000000000000)
 Description: xCAT-vlan provides the xCAT vlan confiuration.
