Secure cookies merge into global xCAT team UI. A few other changes also.
Change-Id: I529160b9e2c31c86aca7c2c1ad32559c43ab4aea

--- a/xCAT-UI/etc/apache2/conf.d/xcat-ui.conf
+++ b/xCAT-UI/etc/apache2/conf.d/xcat-ui.conf
@@ -1,5 +1,12 @@
 Alias /xcat "/opt/xcat/ui"
 PHPINIDir "/opt/xcat/ui"
+
+# Redirect all http request to https
+RewriteEngine On
+RewriteCond %{SERVER_PORT} 80
+RewriteCond %{HTTPS} !=on
+RewriteRule ^/?xcat/(.*) https://%{SERVER_NAME}/xcat/$1 [R,L]
+
 <Directory "/opt/xcat/ui">
  Options FollowSymLinks
  AllowOverride None
