xcatd systemd unit file
1, Using xcatctl to control the xcatd daemon, and the unit file just
leverage this routine.
2, xcatd reload action will create a new Process, the behaviour is not
supported in systemd fork mode
3, Modify the related spec/debian files for above changes; and it should
cover the upgrade case from no systemd unit version

--- a/xCAT-server/etc/systemd/xcatd.service
+++ b/xCAT-server/etc/systemd/xcatd.service
@@ -4,10 +4,11 @@ After=network.target syslog.service
 
 [Service]
 EnvironmentFile=-/etc/sysconfig/xcat
-ExecStartPre=. /etc/profile.d/xcat.sh
-ExecStart=/opt/xcat/sbin/xcatd -p /var/run/xcatd.pid
 Type=forking
 PIDFile=/var/run/xcatd.pid
+ExecStart=/usr/sbin/xcatctl start
+ExecStop=/usr/sbin/xcatctl stop
+ExecReload=/bin/sh -c "echo Not support reload action in systemd, run \'xcatctl reload\' instead.; exit -1"
 
 [Install]
 WantedBy=multi-user.target
