--- a/xCAT-test/debian/rules
+++ b/xCAT-test/debian/rules
@@ -15,6 +15,8 @@ build:
 	mkdir -p share/doc/man1
 	pod2man pods/man1/xcattest.1.pod > share/man/man1/xcattest.1
 	pod2html pods/man1/xcattest.1.pod > share/doc/man1/xcattest.1.html
+	pod2man pods/man1/xcatperftest.1.pod > share/man/man1/xcatperftest.1
+	pod2html pods/man1/xcatperftest.1.pod > share/doc/man1/xcatperftest.1.html
 	pwd
 
 clean:
